--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,10 +39,9 @@
 
 .main {
     width: 650px;
+    height:490px;
     margin-left: 100px;
     margin-top: 25px;
-    padding-top: 5px;
-    padding-bottom: 5px;
     padding-left: 20px;
     padding-right: 20px;
     border: .5px solid black;
@@ -76,8 +75,9 @@
 .connect {
     width: 250px;
     height: 120px;
-    margin-right: 350px;
-    margin-top: -365px;
+    position: fixed;
+    top: 98px;
+    right:345px;
     padding-top: 5px;
     padding-bottom: 5px;
     padding-left: 0px;
@@ -92,8 +92,9 @@
 .connect2 {
     width: 250px;
     height: 120px;
-    margin-right: 350px;
-    margin-top: -540px;
+    position: fixed;
+    top: 98px;
+    right:345px;
     padding-top: 5px;
     padding-bottom: 5px;
     padding-left: 0px;
@@ -108,8 +109,9 @@
 .connect3 {
     width: 250px;
     height: 120px;
-    margin-right: 350px;
-    margin-top: -881px;
+    position: fixed;
+    top: 98px;
+    right:345px;
     padding-top: 5px;
     padding-bottom: 5px;
     padding-left: 0px;
@@ -176,3 +178,10 @@ input[type=submit]:hover {
     color: white;
     background: #4aaaa5;
    }
+
+@media screen and (max-width: 768px) {
+    body {
+        background-color: black;
+}
+
+}
